cluster/security/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: security
  labels:
    namespace: security
    istio-injection: enabled
